syntax = "proto3";

package protoc;

option csharp_namespace = "Mobius.Proto";
option go_package = "github.com/justjack1521/mevium/pkg/genproto/protoc";

import "data.proto";

enum RequestType {
  BASE = 0;
  GET_PROFILE = 200;
  CREATE_PROFILE = 300;
  UPDATE_PROFILE = 350;
  CARD_SALE = 400;
  CARD_FILTER_SORT = 500;
  CARD_FAVOURITE = 600;
  SKILL_PANEL = 700;
  DECK_EDIT = 800;
  DECK_EDIT_ALL = 900;
  TELEPORT = 1000;
  PROCESS_REGION_EVENT = 1100;
  PROCESS_REGION_NODE_EVENT = 1150;
  BATTLE_REVIVE = 1200;
  BATTLE_COMPLETE = 1300;
  FOLLOW_PLAYER = 1400;
  UNFOLLOW_PLAYER = 1500;
  CONFIRM_DAILY_MISSION = 1600;
  CLAIM_EVENT_RANKING = 1700;
  CLAIM_MAILBOX = 1800;
  BATTLE_START = 1900;
  CARD_TRANSFER = 2000;
  EXPAND_CARD_SLOTS = 2050;
  CARD_FUSION = 2100;
  CARD_FUSION_BOOST = 2200;
  STAMINA_RESTORE = 2300;
  FIRST_DAILY_LOGIN = 2400;
  CLAIM_LOGIN_CAMPAIGN = 2500;
  GET_RANKING_EVENTS = 2600;
  DELETE_ALL_MAILBOX = 2700;
  CLAIM_RENTAL_REWARD = 2800;
  GET_SOCIAL_DATA = 2900;
  PURCHASE_ITEM = 3000;
  PURCHASE_CARD = 3100;
  ABILITY_SHOP_PURCHASE = 3200;
  CARD_AUGMENT = 3300;
  CLAIM_DAILY_MISSION = 3400;
  JOIN_SOCIAL_CHALLENGE = 3500;
  GET_SOCIAL_CHALLENGE = 3600;
  COMPLETE_REGION_MAP = 3700;
}

enum TeleportRequestType {
  NONE = 0;
  LOGIN = 1;
  WORLD = 2;
  FIELD = 3;
  BATTLE = 4;
}

message RequestHeader {
  string client_id      =  1;
  string connection_id  =  2;
  string command_id     =  3;
}

message BaseRequest {
  RequestHeader header     =  1;
  int32         operation  =  2;
  bytes         data       =  3;
}

message BattleCompleteRequest {
  uint64 score                            =   1;
  game.ProtoBattleStatistics statistics   =   2;
}

message BattleReviveRequest {

}

message BattleStartRequest {
  int32 index = 1;
  int32 deck_index = 2;
  bool hard_mode = 3;
  string rental_player_id = 5;
  game.ProtoPlayerCardInfo rental_card = 6;
}

message CardAugmentRequest {
  int32 target_card_index = 1;
  repeated int32 inventory_materials = 2;
  repeated int32 bank_materials = 3;
}

message CardFavouriteRequest {
  string card = 1;
  bool value = 2;
}

message CardFilterSortSetRequest {
  int32            View             =  1;
  int32            Index            =  2;
  repeated  int32  CardTypes        =  3;
  repeated  int32  CardElements     =  4;
  repeated  int32  SpecialFilters   =  5;
  repeated  int32  SortSelectors    =  6;
  bool             SortDescending   =  7;
}

message CardFusionRequest {
  int32 base_card = 1;
  repeated int32 inventory_cards = 2;
  repeated int32 bank_cards = 3;
}

message CardBoostFusionRequest {
  int32 card = 1;
  bool max_boost = 2;
}

message CardSaleRequest {
  repeated string cards = 1;
}

message CardTransferRequest {
  repeated int32 cards = 2;
  int32 inventory_source = 3;
}

message CreateProfileRequest {
  string player_name = 1;
}

message ClaimEventRankingRequest {
  string id = 1;
  string code = 2;
}

message ClaimLoginCampaignRequest {
  string campaign_id = 1;
}

message ClaimMailBoxItemRequest {
  string id = 1;
}

message ClaimDailyMissionRequest {

}

message ClaimAllMailBoxItemRequest {

}

message DeleteAllMailboxItemRequest {

}

message ClaimRentalCardRewardRequest {

}

message ConfirmDailyMissionRequest {

}

message DeckEditRequest {
  int32             Index               =  1;
  int32             JobCardIndex        =  2;
  int32             JobCardSubIndex     =  3;
  int32             WeaponIndex         =  4;
  int32             SubJobCardIndex     =  5;
  int32             SubJobCardSubIndex  =  6;
  int32             SubWeaponIndex      =  7;
  repeated  string  AbilityCardIDs      =  8;
  repeated  string  SubAbilityCardIDs   =  9;
}

message DeckEditAllRequest {
  repeated DeckEditRequest Requests = 1;
  bool MPDeck = 2;
}

message FetchPlayerDataRequest {

}

message FirstDailyLoginRequest {

}

message ProcessRegionEventRequest {
  string region_map_id = 1;
  string event_id = 2;
}

message ProcessRegionNodeEventRequest {
  string region_map_id = 1;
  string event_id = 2;
}

message SkillPanelUnlockRequest {
  int32 job_card_index = 1;
  int32 group_index = 2;
  int32 page_index = 3;
  int32 panel_index = 4;
}

message StaminaRestoreRequest {
  bool multi_player = 1;
}

message TeleportRequest {
  string region_map = 1;
  int32 region_map_node = 2;
  TeleportRequestType source = 3;
}

message UpdateProfileRequest {
  string name = 1;
  string comment = 2;
  int32 rental_card = 3;
  int32 companion = 4;
}

message ExpandAbilityCardSlotRequest {
  int32 source = 1;
  int32 amount = 2;
}

message ItemShopItemPurchaseRequest {
  string receive_item = 1;
  int32 receive_quantity = 2;
  string cost_item = 3;
  int32 cost_quantity = 4;
}

message ItemShopCardPurchaseRequest {
  string receive_card = 1;
  int32 receive_quantity = 2;
  string cost_item = 3;
  int32 cost_quantity = 4;
}

message AbilityShopPurchaseRequest {
  string ability_card_id = 1;
  bool max = 2;
}

message CompleteRegionMapRequest {
  string region_map_id = 1;
}